test fix chat recommendation container spacing in mobile view

--- a/docs/css/layout/chatbot-page/_chat-area.scss
+++ b/docs/css/layout/chatbot-page/_chat-area.scss
@@ -22,7 +22,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: .5rem;
+            gap: 1rem;
 
 
             p:first-of-type {
@@ -56,6 +56,7 @@
             
             @media (width >=800px) {
                 gap: 1.5rem;
+                margin-top: 1rem;
             }
 
         }
@@ -93,12 +94,11 @@
                     p {
                         color: white;
                         font-size: clamp(0.875rem, 0.7321rem + 0.7143vw, 1rem);
-                        margin-bottom: clamp(0rem, -0.3333rem + 1.6667vw, 0.5rem);
-                    }
-                }
+                        @media (width > 800px) {
 
-                @media (width >=800px) {
-                    padding: 1rem;
+
+                        }
+                    }
                 }
 
                 width: clamp(18rem, 13.3333rem + 23.3333vw, 25rem);
@@ -291,7 +291,7 @@
                 border: 1px solid var(--chatbot-border);
                 border-radius: 16px;
                 color: white;
-                padding: clamp(1rem, -0.6667rem + 5.3333vw, 2rem) 3.5rem clamp(1rem, -0.6667rem + 5.3333vw, 2rem) 1rem;
+                padding: clamp(1rem, -0.6667rem + 5.3333vw, 1.5rem) 3.5rem clamp(1rem, -0.6667rem + 5.3333vw, 1.5rem) 1rem;
                 outline: none;
                 position: relative;
                 z-index: 2;
